# deepwalk

./: .gitignore  README.rst  UV_USAGE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_final.py
.github/workflows/: ci.yml
deepwalk/: __init__.py  __main__.py  graph.py  skipgram.py
tests/: test_deepwalk.py
