[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepwalk"
version = "1.0.4"
description = "DeepWalk online learning of social representations."
readme = "README.rst"
license = {text = "GPLv3"}
authors = [
    {name = "Bryan Perozzi", email = "bperozzi@cs.stonybrook.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["deepwalk", "graph", "embedding", "network", "machine learning"]
requires-python = ">=3.8"
dependencies = [
    "wheel>=0.30.0",
    "Cython>=0.29.0",
    "six>=1.15.0",
    "gensim @ file:///Users/L111376/Library/CloudStorage/OneDrive-EliLillyandCompany/Documents/GitHub/gensim",
    "scipy>=1.6.0",
    "psutil>=5.0.0",
    "networkx>=2.5",
    "numpy>=1.19.0",  # Support both NumPy 1 and 2
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]
test = [
    "pytest>=6.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/phanein/deepwalk"
Repository = "https://github.com/phanein/deepwalk"
Documentation = "https://github.com/phanein/deepwalk"
"Bug Tracker" = "https://github.com/phanein/deepwalk/issues"

[project.scripts]
deepwalk = "deepwalk.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepwalk*"]

[tool.setuptools.package-data]
deepwalk = ["*.pyx", "*.pxd"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["deepwalk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=deepwalk",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true