[metadata]
name = deepwalk
version = 1.0.4
author = Bryan Perozzi
author_email = bperozzi@cs.stonybrook.edu
description = DeepWalk online learning of social representations.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/phanein/deepwalk
project_urls =
    Bug Tracker = https://github.com/phanein/deepwalk/issues
    Documentation = https://github.com/phanein/deepwalk
    Source Code = https://github.com/phanein/deepwalk
license = GPLv3
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
keywords = deepwalk, graph, embedding, network, machine learning

[options]
packages = find:
python_requires = >=3.8
install_requires =
    wheel>=0.30.0
    Cython>=0.29.0
    six>=1.15.0
    gensim>=4.0.0
    scipy>=1.6.0
    psutil>=5.0.0
    networkx>=2.5
    numpy>=1.19.0
include_package_data = True

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    deepwalk = deepwalk.__main__:main

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov
    black
    isort
    flake8
    mypy
test =
    pytest>=6.0
    pytest-cov

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --verbose --cov=deepwalk --cov-report=term-missing

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/,build/,dist/